--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Get Tag
         id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+        run: echo ::get-tag name=tag::${GITHUB_REF#refs/*/}
     - uses: actions/setup-java@v1
       with:
         java-version: '11.x'
